2009-03-12 CHEN Yangyang <skabyy@gmail.com>

    * Add a feature to merge the files in /etc/apt/sources.list.d/ to /etc/apt/sources.list in the "Find fastest repository mirror" pane.
    * Add a frame border to the scroll area in the "Find fastest repository mirror" pane.
    * Add a button to skip the network checking in quick setup dialog.
    * Change the implementation of nautilus setting using signal.

2009-03-08 Starboy Qi <starboy.qi@gmail.com>

    * Add extcalc, a awesome calculator.
    * Update fcitx to latest version.

2009-03-08 MA Yue <velly.empire@gmail.com>

    * Add Firefox stable repository.
    * Add Typespeed, a typing practise game.

2009-03-07 CHEN Yangyang <skabyy@gmail.com>

    * Automatically save/load repository response time.

2009-03-04 Homer Xing <homer.xing@gmail.com>

    * Fixed a locale fetching bug.

2009-03-02 Homer Xing <homer.xing@gmail.com>

    * Improve mplayer-vod.

2009-03-02 Starboy Qi <starboy.qi@gmail.com>

    * Display sound card information in hardware-info pane.

2009-02-28 Homer Xing <homer.xing@gmail.com>

    * Merged translation from Launchpad
    * Added repository in Ghana & Peru
    * Did not raise exceptions if "apt-key del" failed
    * Did not install GNOMEArtNG on Ubuntu 10.04
    * Did not install Skype on Ubuntu x86_64
    * Vuze would be installed directly from repository for Ubuntu >= 9.10
    * Deleted setup.py
    * Ignored error for "sudo apt-get update"
    * Removed bug "release unlocked lock"
    * Changed display format of response time
    * Removed bug "Non-ANSI characters cannot be matched"
    * Reduced the number of regular expressions created in searching progress
    * Adopted Gobject signals
    * Improved the bug report window
    * Added one button on toolbar
    * Improved the efficiency of context window
    * Reduced image size
    * Adopted tree-view in left pane
    * Randomly display a tip after logging in GNOME

2009-01-10 Homer Xing <homer.xing@gmail.com>
